test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-10 23:14:03.545287

